--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: black;
+    text-align: center;
     
 }
 .header-main{
@@ -11,5 +12,14 @@ body{
 .link{
     color: aquamarine;
     font-size: 16px;
-    text-align: center;
+    
+}
+h2{
+    color: white;
+    font-size: 42px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.t1{
+    color: gray;
+    font-size: 21px;
 }
